@@ -472,4 +472,7 @@ Koos Vriezen <koos.vriezen@xs4all.nl>
 Ian MacIntosh <ian_macintosh@users.sourceforge.net>
   Video resizing using mediaLib
 
+Mike Lampard <mike_lampard@hotmail.com>
+  Pan & Scan support for the DXR3 MPEG decoder
+
 (let us know if we've forgotten anyone)
