@@ -24,6 +24,7 @@ xine-lib (1-rc4)
   * video_out_pgx32 now properly clips video output
   * video_out_pgx64 now disables overlay when fully occluded, fixed displaying
     some frames out of order when multi-buffering.
+  * DXR3: option to use Pan & Scan information embedded in MPEG and DVB streams
 
 xine-lib (1-rc3c)
   * fix the deadlock with non-seekable input plugins
